@@ -23,6 +23,7 @@ import com.kuuhaku.Main;
 import com.kuuhaku.model.common.ColorlessEmbedBuilder;
 import com.kuuhaku.utils.Helper;
 import com.kuuhaku.utils.JSONObject;
+import com.kuuhaku.utils.ShiroInfo;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.TextChannel;
@@ -30,7 +31,7 @@ import net.dv8tion.jda.api.entities.User;
 
 import java.io.File;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 
@@ -77,12 +78,12 @@ public abstract class Action {
 				eb.setFooter("↪ | Clique para retribuir");
 				channel.sendMessage(message)
 						.setEmbeds(eb.build())
-						.queue(s -> Pages.buttonize(s, Collections.singletonMap("↪", (mb, ms) -> {
-							if (mb.getId().equals(target.getId())) {
-								answer(channel);
+						.queue(s -> Pages.buttonize(s, Map.of(Helper.parseEmoji("↪"), wrapper -> {
+									if (wrapper.getUser().getId().equals(target.getId())) {
+										answer(channel);
 										s.clearReactions().queue();
 									}
-								}), false, 1, TimeUnit.MINUTES, u -> u.getId().equals(target.getId()))
+								}), ShiroInfo.USE_BUTTONS, false, 1, TimeUnit.MINUTES, u -> u.getId().equals(target.getId()))
 						);
 			} else {
 				channel.sendMessage(message).setEmbeds(eb.build()).queue();
